# date-countdown

./: .gitignore  .travis.yml  README.md  com.github.rickybas.date-countdown.json  com.github.rickybassom.date-countdown.json  date-countdown.doap  meson.build
data/: Application.css  com.github.rickybas.date-countdown.appdata.xml  com.github.rickybas.date-countdown.appdata.xml.in  com.github.rickybas.date-countdown.desktop  com.github.rickybas.date-countdown.gschema.xml  com.github.rickybassom.date-countdown.appdata.xml.in  com.github.rickybassom.date-countdown.desktop.in  com.github.rickybassom.date-countdown.gresource.xml  com.github.rickybassom.date-countdown.gschema.xml  css.gresource.xml  meson.build
debian/: changelog  control  copyright  rules
po/: LINGUAS  POTFILES  com.github.rickybas.date-countdown.pot  fr.po  lt.po  nl.po  pt.po
po/extra/: LINGUAS  POTFILES  extra.pot  fr.po  lt.po  pt.po
src/: Application.vala  CircularProgressBar.vala  DatePicker.vala  MainWindow.vala  circular-progress-bar.vala  meson.build
